More spacing fixes.

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -229,7 +229,7 @@
           color: $font-color-light;
         }
         h2.check-out-work-below {
-          padding-top: 28px;
+          padding-top: 25px;
         }
       }
       
